--- a/src/index.html
+++ b/src/index.html
@@ -69,21 +69,21 @@
                                 <li class="header-nav__subitem">
                                     <a
                                         class="header-nav__sublink"
-                                        href="#urban-patrimony-section"
+                                        href="#patrimony-section"
                                         >Patrimonio urbano</a
                                     >
                                 </li>
                                 <li class="header-nav__subitem">
                                     <a
                                         class="header-nav__sublink"
-                                        href="#natural-patrimony-section"
+                                        href="#patrimony-section"
                                         >Patrimonio natural</a
                                     >
                                 </li>
                                 <li class="header-nav__subitem">
                                     <a
                                         class="header-nav__sublink"
-                                        href="#intangible-patrimony-section"
+                                        href="#patrimony-section"
                                         >Patrimonio inmaterial</a
                                     >
                                 </li>
@@ -238,17 +238,17 @@
                         </figcaption>-->
                         <figure>
                             <iframe
-                                class="section__video-iframe"
                                 width="560"
                                 height="315"
-                                src="https://www.youtube.com/embed/2tryrRsmZfE"
+                                src="https://www.youtube.com/embed/-o3W34-IqZU?si=UfqCmpPSeVt4O06f"
                                 title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin"
                                 allowfullscreen
                             ></iframe>
-                            <figcaption class="aligned">
-                                Información turística sobre Osuna
+                            <figcaption class="">
+                                Historia de Escocia
                             </figcaption>
                         </figure>
                     </div>
@@ -321,8 +321,10 @@
                 </div>
             </section>
             <section class="section" id="gastronomy-section">
-                <div class="section__container o-container o-grid">
-                    <div class="section__data">
+                <div
+                    class="section__container o-container o-grid section__container--grid-dos"
+                >
+                    <div class="section__data section__data--left">
                         <img
                             class="section__background section__background--opacity-004"
                             src="/src/assets/images/gastronomy/gastronomy-background.jpg"
@@ -330,7 +332,9 @@
                         />
                         <span class="section__shadow"></span>
 
-                        <h2 class="section__title">Gastronomía</h2>
+                        <h2 class="section__title section__title--left">
+                            Gastronomía
+                        </h2>
                         <p class="section__description">
                             Edimburgo es conocida por sus restaurantes de alta
                             calidad que ofrecen desde platos tradicionales
@@ -343,6 +347,42 @@
                             largo del año, destacando la calidad y la innovación
                             de su escena culinaria.
                         </p>
+                    </div>
+
+                    <div
+                        class="section__cards o-grid section__cards--grid-tres"
+                    >
+                        <article class="section__card">
+                            <img
+                                class="section__card-img"
+                                src="/src/assets/images/gastronomy/restaurants-card.jpg"
+                                alt=""
+                            />
+                            <h3 class="section__card-title">Restaurantes</h3>
+                            <span class="section__card-shadow"></span>
+                        </article>
+
+                        <article class="section__card">
+                            <img
+                                class="section__card-img"
+                                src="/src/assets/images/gastronomy/pubs-card.jpg"
+                                alt=""
+                            />
+                            <h3 class="section__card-title">Pubs</h3>
+                            <span class="section__card-shadow"></span>
+                        </article>
+
+                        <article class="section__card">
+                            <img
+                                class="section__card-img"
+                                src="/src/assets/images/gastronomy/food-card.jpg"
+                                alt=""
+                            />
+                            <h3 class="section__card-title">
+                                Productos tradicionales
+                            </h3>
+                            <span class="section__card-shadow"></span>
+                        </article>
                     </div>
                 </div>
             </section>
