--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
+<!-- HTML includes: footer, header -->
 <!DOCTYPE html>
-
-<html>
+<html lang="es">
     <head>
         <!--======= #META LABELS =======-->
         <meta charset="utf-8" />
@@ -24,104 +24,7 @@
 
     <body>
         <!--======= #HEADER =======-->
-        <header>
-            <nav class="header-nav o-container">
-                <a href="#home-section">
-                    <picture id="header-nav-logo" class="header-nav__logo">
-                        <source
-                            media="(max-width: 900px)"
-                            srcset="
-                                /src/assets/images/global/logo/logo-text.svg
-                            "
-                        />
-                        <img
-                            id="header-nav-img"
-                            src="/src/assets/images/global/logo/extended-logo.svg"
-                            alt="Logo"
-                        />
-                    </picture>
-                </a>
-
-                <div id="header-nav-menu" class="header-nav__menu">
-                    <ul class="header-nav__list u-nowrap">
-                        <li class="header-nav__item">
-                            <a class="header-nav__link" href="#history-section"
-                                >Historia</a
-                            >
-                        </li>
-
-                        <li id="patrimony-item" class="header-nav__item">
-                            <div class="header-nav__link-content">
-                                <a
-                                    class="header-nav__link"
-                                    href="#patrimony-section"
-                                    >Patrimonio</a
-                                >
-                                <i
-                                    id="caret-icon"
-                                    class="fa-solid fa-caret-right"
-                                ></i>
-                            </div>
-                            <ul
-                                id="header-nav-sublist"
-                                class="header-nav__sublist"
-                            >
-                                <li class="header-nav__subitem">
-                                    <a
-                                        class="header-nav__sublink"
-                                        href="#patrimony-section"
-                                        >Patrimonio urbano</a
-                                    >
-                                </li>
-                                <li class="header-nav__subitem">
-                                    <a
-                                        class="header-nav__sublink"
-                                        href="#patrimony-section"
-                                        >Patrimonio natural</a
-                                    >
-                                </li>
-                                <li class="header-nav__subitem">
-                                    <a
-                                        class="header-nav__sublink"
-                                        href="#patrimony-section"
-                                        >Patrimonio inmaterial</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li class="header-nav__item">
-                            <a
-                                class="header-nav__link"
-                                href="#gastronomy-section"
-                                >Gastronomía</a
-                            >
-                        </li>
-
-                        <li class="header-nav__item">
-                            <a class="header-nav__link" href="#events-section"
-                                >Eventos</a
-                            >
-                        </li>
-
-                        <!--<li class="header-nav__item">
-                            <a class="header-nav__link" href="#guide-section"
-                                >Guia turística</a
-                            >
-                        </li>-->
-                    </ul>
-
-                    <div id="close-btn" class="header-nav__close">
-                        <i class="fa-solid fa-xmark"></i>
-                    </div>
-                </div>
-
-                <div id="hamburger-btn" class="header-nav__hamburger">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-            </nav>
-            <span class="header__shadow"></span>
-        </header>
+        <include src="./views/header.html"></include>
 
         <!--======= #MAIN =======-->
         <main>
@@ -242,10 +145,10 @@
                                 height="315"
                                 src="https://www.youtube.com/embed/-o3W34-IqZU?si=UfqCmpPSeVt4O06f"
                                 title="YouTube video player"
-                                frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin"
                                 allowfullscreen
+                                style="border: none"
                             ></iframe>
                             <figcaption class="">
                                 Historia de Escocia
@@ -433,79 +336,7 @@
         </main>
 
         <!--======= #FOOTER =======-->
-        <footer class="footer">
-            <div class="footer__container o-container o-grid">
-                <div class="footer__content o-grid">
-                    <div class="footer__brand">
-                        <a class="footer__logo" href="">EdimburGo!</a>
-                        <p class="footer__description">
-                            Visítenos y explore Edimburgo sin límites.
-                        </p>
-                    </div>
-
-                    <div class="footer__data o-grid">
-                        <div class="footer__data-colum">
-                            <h3 class="footer__title">Quiénes somos</h3>
-
-                            <ul class="footer__links">
-                                <li>
-                                    <a class="footer__link" href=""
-                                        >Quiénes somos</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="footer__link" href=""
-                                        >Aviso legal</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="footer__link" href=""
-                                        >Privacidad</a
-                                    >
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="footer__data-colum">
-                            <h3 class="footer__title">Contactar</h3>
-
-                            <ul class="footer__links">
-                                <li>
-                                    <a class="footer__link" href=""
-                                        >Centro de soporte</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="footer__link" href="">Contacto</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="footer__group o-grid">
-                    <div class="footer__social o-grid">
-                        <a class="footer__social-link" href="" target="_blank"
-                            ><i class="fa-brands fa-facebook-f"></i
-                        ></a>
-                        <a class="footer__social-link" href="" target="_blank"
-                            ><i class="fa-brands fa-instagram"></i
-                        ></a>
-                        <a class="footer__social-link" href="" target="_blank"
-                            ><i class="fa-brands fa-x-twitter"></i
-                        ></a>
-                        <a class="footer__social-link" href="" target="_blank"
-                            ><i class="fa-brands fa-youtube"></i
-                        ></a>
-                    </div>
-
-                    <span class="footer__copy">
-                        <p>&copy; UOC</p>
-                        <p>Diseñado por jmazuelos</p>
-                    </span>
-                </div>
-            </div>
-        </footer>
+        <include src="./views/footer.html"></include>
 
         <script type="module" src="/src/assets/scripts/main.js"></script>
     </body>
